# XRoboToolkit-Teleop-Sample-Python

./: ACT_Deployment_Guide.md
assets/TB6-R5-RevA1-urdf/: CMakeLists.txt  package.xml
assets/TB6-R5-RevA1-urdf/launch/: display.launch  gazebo.launch
assets/TB6-R5-RevA1-urdf/urdf/: 7260501-000000-001 TB6-R5-RevA1-urdf.urdf
docs/: ACT_Policy_Infer_Interface.md
lerobot_robot_tb6r5/: README.md  pyproject.toml
lerobot_robot_tb6r5/lerobot_robot_tb6r5/: __init__.py  config_tb6r5.py  tb6r5.py
lerobot_teleoperator_pico_ctl_tb6r5/: README.md  pyproject.toml
lerobot_teleoperator_pico_ctl_tb6r5/lerobot_teleoperator_pico_ctl_tb6r5/: __init__.py  config_pico_ctl_tb6r5.py  pico_ctl_tb6r5.py  pico_ctl_tb6r5_controller.py  record_cli.py  record_step_display.py
lerobot_teleoperator_pico_tb6r5/: README.md  pyproject.toml
lerobot_teleoperator_pico_tb6r5/lerobot_teleoperator_pico_tb6r5/: __init__.py  config_pico_tb6r5.py  pico_tb6r5.py  pico_tb6r5_bridge.py
scripts/hardware/: policy_infer_tb6r5_act.py  record_tb6r5_lerobot.sh  teleop_tb6r5_hardware.py  test_direct_single_rpc.py  test_subloop1_direct_rpc.py  test_subloop1_joganyj_gripper.py  verify_tb6r5_sdk.py
scripts/misc/: convert_tb6r5_pkl_to_lerobot.py  convert_tb6r5_pkl_to_lerobot_v3.py  eval_act_on_lerobot_tb6r5.py  merge_lerobot_datasets_in_folder.py  plot_tb6r5_pkl_curves.py  test_data_log_analysis.py
scripts/visualization/: rs_cam_streaming.py  vis_jog_any_c_robottarget.py
tb6r5_policy_infer/: README.md  pyproject.toml
tb6r5_policy_infer/tb6r5_policy_infer/: camera.py  cli.py  constants.py  eval.py  eval_cli.py  gripper.py  lerobot_compat.py  policy.py  runner.py
xrobotoolkit_teleop/common/: base_hardware_teleop_controller.py  base_teleop_controller.py  camera_streams.py  lerobot_v3_logger.py
xrobotoolkit_teleop/hardware/: tb6r5_command_gate.py  tb6r5_teleop_controller.py
xrobotoolkit_teleop/hardware/interface/: realsense.py  tb6r5.py
xrobotoolkit_teleop/utils/: geometry.py
